k8s/admission-namespace/admission-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admission-service-ingress
  namespace: admission
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /admission
        pathType: Prefix
        backend:
          service:
            name: admission-service
            port:
              number: 9007
